--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -75,7 +75,7 @@ jobs:
         uses: docker/build-push-action@67af6dc1d38f334ae6935c94587e8a5b45a81a0e
         with:
           context: .
-          file: Dockerfile.curl
+          file: Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
