--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,8 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: azman0101/hello-world-docker-action@main
-
+        with:
+          who-to-greet: 'Mona the Octocat'
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
