--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -30,6 +30,6 @@ jobs:
         uses: renovatebot/github-action@v43.0.13
         with:
           configurationFile: renovate.json
-          token: ${{ secrets.RENOVATE_TOKEN || secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.RENOVATE_TOKEN || secrets.GITHUB_TOKEN || secrets.MY_RELEASE_PLEASE_TOKEN }}
         env:
           LOG_LEVEL: 'debug'
