--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -38,7 +38,7 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Get version from manifest
-        run: echo "VERSION=$(jq -r '.".'" .release-please-manifest.json)" >> $GITHUB_ENV
+        run: echo "VERSION=$(jq -r '.[]' .release-please-manifest.json)" >> $GITHUB_ENV
 
       # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
