--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -77,5 +77,5 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}${{ github.event_name == 'pull_request' && format('-pr-{0}', github.event.number) || '' }}
           labels: ${{ steps.meta.outputs.labels }}
