--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,3 +1,4 @@
+---
 name: Docker
 
 # This workflow uses actions that are not certified by GitHub.
@@ -9,11 +10,11 @@ on:
   schedule:
     - cron: '27 13 * * *'
   push:
-    branches: [ "main" ]
+    branches: ["main"]
     # Publish semver tags as releases.
-    tags: [ 'v*.*.*' ]
+    tags: ['v*.*.*']
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -54,6 +55,7 @@ jobs:
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
       - name: Log into registry ${{ env.REGISTRY }}
+        if: github.event.pull_request.user.login != 'renovate[bot]'
         uses: docker/login-action@v3.5.0
         with:
           registry: ${{ env.REGISTRY }}
@@ -76,7 +78,9 @@ jobs:
         with:
           context: .
           file: Dockerfile
-          push: true
+          push: >-
+            ${{ github.event.pull_request.user.login != 'renovate[bot]' }}
           platforms: linux/amd64,linux/arm64
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}${{ github.event_name == 'pull_request' && format('-pr-{0}', github.event.number) || '' }}
+          tags: >-
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}${{ github.event_name == 'pull_request' && format('-pr-{0}', github.event.number) || '' }}
           labels: ${{ steps.meta.outputs.labels }}
